<resources>
    <string name="app_name">My News</string>
    <!-- Used in NavigationDrawer -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="top_stories">Top Stories</string>
    <string name="most_popular">Most Popular</string>
    <string name="search">Search</string>
    <string name="notifications">Notifications</string>
    <string name="cancel">Cancel</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="api_key">UqsVUuAGooyAyaJPZrwM45HG454PT72r</string>
    <string name="shared_preferences_key">ch.openclassrooms.enyo1.mynews.controller.activities.NotificationsActivity</string>
    <string name="begin_date">Begin Date</string>
    <string name="search_query_term">Search query term</string>
    <string name="end_date">End Date</string>
    <string name="pick_begin_date">pick begin date</string>
    <string name="pick_end_date">pick end date</string>
    <string name="enable_notifications_once_per_day">Enable notifications (once per day)</string>
    <string name="arts">Arts</string>
    <string name="politics">Politics</string>
    <string name="business">Business</string>
    <string name="sports">Sports</string>
    <string name="entrepreneurs">Entrepreneurs</string>
    <string name="travel">Travel</string>
    <string name="help">Help</string>
    <string name="about">About</string>

</resources>
