<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    >
    <item
        android:id="@+id/menu_activity_main_toolbar_search"
        android:icon="@drawable/baseline_search_white_36"
        app:showAsAction="ifRoom"
        android:title="@string/search">
    </item>

    <item
        android:id="@+id/activity_main_menu_toolbar_overflow_notifications"
        app:showAsAction="never"
        android:title="@string/notifications">
    </item>
    <item
        android:id="@+id/activity_main_menu_toolbar_overflow_help"
        app:showAsAction="never"
        android:title="@string/help">
    </item>
    <item
        android:id="@+id/activity_main_menu_toolbar_overflow_about"
        app:showAsAction="never"
        android:title="@string/about">
    </item>
</menu>