<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TableLayout
        android:id="@+id/checkbox"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <CheckBox
                android:id="@+id/checkBox_arts"
                android:layout_width="185dp"
                android:layout_height="51dp"
                android:onClick="onCheckBoxClicked"
                android:tag="Arts"
                android:text="@string/arts"
                android:textSize="18sp" />


            <CheckBox
                android:id="@+id/checkBox_politics"
                android:layout_width="225dp"
                android:layout_height="wrap_content"
                android:onClick="onCheckBoxClicked"
                android:tag="Politics"
                android:text="@string/politics"
                android:textSize="18sp" />


        </TableRow>

        <TableRow>

            <CheckBox
                android:id="@+id/checkBox_business"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="onCheckBoxClicked"
                android:tag="Business"
                android:text="@string/business"
                android:textSize="18sp" />

            <CheckBox
                android:id="@+id/checkBox_sports"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="onCheckBoxClicked"
                android:tag="Sports"
                android:text="@string/sports"
                android:textSize="18sp" />

        </TableRow>


        <TableRow>

            <CheckBox
                android:id="@+id/checkBox_entrepreneurs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="onCheckBoxClicked"
                android:tag="Entrepreneurs"
                android:text="@string/entrepreneurs"
                android:textSize="18sp" />

            <CheckBox
                android:id="@+id/checkBox_travel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="onCheckBoxClicked"
                android:tag="Travel"
                android:text="@string/travel"
                android:textSize="18sp" />
        </TableRow>

    </TableLayout>


</LinearLayout>
